css/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
.container-fluid {
    width: auto !important;
    max-width: 1280px;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    flex: 1;
    margin-left: auto;
}

.row {
    margin-inline: 0px !important
}

.card {
    padding: 12px;
}

.card-title {
    margin-bottom: 0px !important;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: Poppins, sans-serif;
}

body {
    height: 100%;
    width: 100%;
}

.col {
    text-align: center;
    justify-content: center;
}

li,
a {
    font-weight: 600px;
    font-size: 16px;
    color: #121212 !important;
    text-decoration: none;
}


/* opening of Navbar */

header {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    padding: 30px 0px;
}

.navbar-nav {
    margin-top: 2em;
    list-style: none;
    display: flex;
    gap: 40px;
}

.navbar-nav li {
    font-weight: 600;
}

.navbar-brand {
    color: #121212 !important;
    cursor: pointer;
    font-size: 2.4em !important;
    font-weight: 600;
    transition: all 0.3s ease 0s;
    align-items: baseline !important;
}

.navbar-brand:hover {
    color: #1d85ff !important;
    cursor: pointer;
}

.navbar-nav li a {
    transition: all 0.3s ease 0s;
}

.navbar-nav li a:hover {
    color: #1d85ff !important;
}

.nav-cta {
    background-color: #1d85ff;
    font-size: 1em;
    padding: 12px 20px !important;
    border-radius: 12px !important;
    cursor: pointer;
    transition: all 0.3s ease 0s;
    color: white !important;
    border: none;
}

.nav-cta:hover {
    background-color: #005695;
    color: white !important;
    transition: all 0.3s ease 0s;
}

@media screen and (max-width: 992px) {
    .hamburger {
        padding: 10px 15px 5px;
        display: inline-block;
        cursor: pointer;
        transition-property: opacity, -webkit-filter;
        -webkit-transition-property: opacity, -webkit-filter;
        -o-transition-property: opacity, filter;
        transition-property: opacity, filter;
        transition-property: opacity, filter, -webkit-filter;
        -webkit-transition-duration: 0.15s;
        -o-transition-duration: 0.15s;
        transition-duration: 0.15s;
        -webkit-transition-timing-function: linear;
        -o-transition-timing-function: linear;
        transition-timing-function: linear;
        font: inherit;
        color: inherit;
        text-transform: none;
        background-color: transparent;
        border: 0;
        margin: 0;
        overflow: visible;
    }
    .hamburger:hover {
        opacity: 0.7;
    }
    .hamburger-box {
        width: 30px;
        height: 24px;
        display: inline-block;
        position: relative;
        color: #005695 !important;
    }
    .hamburger-inner {
        display: inline-block;
        top: 50%;
    }
    .nav-cta {
        margin-top: 2.5em;
    }
}


/* Closing of Navbar */


/* opening of Section 1 */

.intro-container {
    margin-top: 4em;
    display: grid;
    align-items: center;
    justify-content: center;
    text-align: center;
}

.section-heading {
    font-size: 3em;
    font-weight: 600;
    text-align: center;
    margin-top: 0.4em;
}

.product-section-heading {
    margin-top: 2.8em;
    margin-bottom: 1.4em;
}

.subheading {
    font-size: 1.2em;
    color: #666666;
}

.intro-services {
    display: flex;
    gap: 14px;
    max-width: auto;
    margin-top: 4em;
    align-items: center;
    justify-content: center;
}

.intro-services-line-seperator {
    height: 2px;
    width: 15%;
    background: #c2c2c2;
}

.intro-services-item {
    cursor: pointer;
    font-size: 20px;
    font-weight: 600;
    transition: all 0.3s ease 0s;
}

.intro-service-item:hover {
    cursor: pointer;
    color: #1994ed;
    transition: all 0.3s ease 0s;
}

.section-image-container {
    background-image: url(/Images/main.jpg);
    background-attachment: fixed;
    height: 35em;
    border-radius: 40px;
    max-width: 90%;
    justify-content: center;
    margin: auto;
    margin-top: 5em;
    background-repeat: no-repeat;
    background-size: cover;
}


/* closing of intro*/


/* Opening of item grid section */

.item-grid {
    margin-top: 5em;
    display: flex;
    justify-content: space-between !important;
    align-items: center;
    max-width: 1000px;
}

.item-grid-img {
    /* height: 25em !important; */
    background-size: contain;
    background-repeat: no-repeat;
    justify-content: center;
}

.item-grid-tag-img {
    height: 100%;
    width: 100%;
    max-width: 440px;
}

@media (max-width:600px) {
    .item-grid-tag-img {
        max-height: 280px;
        max-width: 280px;
        margin-inline: auto;
    }
}

.item-grid-group {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 1.5em;
    margin-right: 1em !important;
}

.item-grid-group-heading {
    font-size: 2.6em;
    color: #121212;
    font-weight: 600;
}

.item-grid-group-body {
    font-size: 1em;
    color: #666666;
    max-width: 30em;
}

.services-button-container {
    display: flex;
    flex-direction: column;
    width: auto;
    margin-top: 2em;
    gap: 2em;
}

.services-button-container-row {
    display: inline-flex;
    row-gap: 20px;
    flex-wrap: wrap;
    justify-content: center;
}

.services-button {
    display: flex;
    gap: 1em;
    padding: 1em 1.2em;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    border: 1px solid #e2e2e2;
    border-radius: 40px;
    background-image: linear-gradient(to top, #e2e2e2 50%, #ffffff 50%);
    background-size: 100% 200%;
    background-position: 0% 0%;
    transition: all 0.3s ease 0s;
}

.services-button:hover {
    background-position: 0% 100%;
}

.services-button-icon {
    background-image: url("/Images/brush.svg");
    height: 32px;
    width: 32px;
    background-size: contain;
}
/* ... */

